Fixed scroll and border on Safari

--- a/styles/style.css
+++ b/styles/style.css
@@ -27,12 +27,15 @@ h1, h2, h3, p {
     font-family: "Nyght";
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 body {
     display: flex;
     justify-content: center;
     background-color: var(--background);
     color: var(--text);
-    overflow-x: hidden;
     position: relative;
 }
 
@@ -69,11 +72,10 @@ body {
     font-style: italic;
     text-decoration: none;
     color: var(--text);
-    padding: 3px 3px;
     box-sizing: border-box;
-    outline: 5px solid var(--background-transparent);
     border-radius: 5px;
     transition: linear 0.3s;
+    padding: 3px 5px;
 }
 
 .project>img {
@@ -90,7 +92,6 @@ body {
 
 .project:hover, .project.hover {
     background-color: var(--background-light);
-    outline: 5px solid var(--background-light);
 }
 
 .project:hover>img, .project.hover>img {
